--- a/challenges/templates/index.html
+++ b/challenges/templates/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{month_name|title}} Challenge</title>
-</head>
-<body>
-   <ul>
-    {% for month in months %} 
-    <li><a href="{% url "month-challenge" month %}">{{ month|title }}</a></li>
-    {% endfor %}
-   </ul>
-   
-</body>
-</html>
+{% extends "base.html "%}
+
+    {% block page_title %}
+        All Challenge -Original-
+    {% endblock %}
+
+    {% block content %}
+        <ul>
+            {% for month in months %} 
+        <li><a href="{% url "month-challenge" month %}">{{ month|title }}</a></li>
+            {% endfor %}
+        </ul>
+    {% endblock %}
 
