--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block css_file %}
+    
+    <link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
     <link rel="stylesheet" href="{% static "challenges/challenges.css" %}">
 {% endblock %}
 
